# bezier-easing-rs

./: .gitignore  CHANGELOG.md  Cargo.toml  LICENSE  README.md
.github/workflows/: ci.yml  pages.yml
crates/bezier-easing/: Cargo.toml
crates/bezier-easing/benches/: easing.rs
crates/bezier-easing/src/: lib.rs
crates/bezier-easing/tests/: bezier_easing_test.rs  bitwise_regression_test.rs  boundary_test.rs  golden_test.rs  property_test.rs
examples/wasm-demo/: Cargo.toml  README.md  index.html
examples/wasm-demo/src/: lib.rs
src/: lib.rs
