[package]
name = "bezier_easing"
version = "0.2.0"
edition.workspace = true
rust-version.workspace = true
description = "Rust port of gre/bezier-easing for cubic Bezier animation curves"
repository.workspace = true
license.workspace = true
documentation = "https://docs.rs/bezier_easing"
readme = "../../README.md"
keywords = ["bezier", "easing", "animation", "css"]
categories = ["graphics", "mathematics"]

[dependencies]
