[package]
name = "bezier_easing"
version = "0.3.0"
edition.workspace = true
rust-version.workspace = true
description = "Rust port of gre/bezier-easing for cubic Bezier animation curves"
repository.workspace = true
license.workspace = true
documentation = "https://docs.rs/bezier_easing"
readme = "../../README.md"
keywords = ["bezier", "easing", "animation", "css"]
categories = ["graphics", "mathematics"]

[dependencies]

[dev-dependencies]
criterion = "0.5"
proptest = "1"

[[bench]]
name = "easing"
harness = false
