[package]
name = "bezier_easing_wasm_demo"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true
description = "WebAssembly demo for the bezier_easing Rust crate"
repository.workspace = true
license-file = "../../LICENSE"
publish = false

[lib]
crate-type = ["cdylib"]

[dependencies]
bezier_easing = { path = "../../crates/bezier-easing" }
wasm-bindgen = "0.2"
